qlc/cpp/ql.h

  QlOvernightIndex *DLLEXPORT qlCreateONIndex(char *name, QlYieldTermStructure *fwd, char **e);
  void DLLEXPORT qlFreeIborIndex(QlIborIndex *i);
  QlInterestRateIndex* DLLEXPORT qlIborIndexAsInterestRateIndex(QlIborIndex *o);
  void DLLEXPORT qlFreeOvernightIndex(QlOvernightIndex *o);
  QlIborIndex* DLLEXPORT qlOvernightIndexAsIborIndex(QlOvernightIndex *o);
  void DLLEXPORT qlFreeInterestRateIndex(QlInterestRateIndex *o);
  QlIndex* DLLEXPORT qlInterestRateIndexAsIndex(QlInterestRateIndex *o);
  void DLLEXPORT qlFreeSwapIndex(QlSwapIndex *o);
  QlInterestRateIndex* DLLEXPORT qlSwapIndexAsInterestRateIndex(QlSwapIndex *o);
  void DLLEXPORT qlFreeBMAIndex(QlBMAIndex *o);
  QlInterestRateIndex* DLLEXPORT qlBMAIndexAsInterestRateIndex(QlBMAIndex *o);
  void DLLEXPORT qlFreeOvernightIndexedSwapIndex(QlOvernightIndexedSwapIndex *o);
  QlSwapIndex* DLLEXPORT qlOvernightIndexedSwapIndexAsSwapIndex(QlOvernightIndexedSwapIndex *o);
  QlBMAIndex* DLLEXPORT qlBMAIndex(QlYieldTermStructure* h, char **e);
  QlSwapIndex* DLLEXPORT qlCreateLiborSwapIndex(char *name, Period* tenor, QlYieldTermStructure* h1, QlYieldTermStructure* h2, char **e);
  QlOvernightIndexedSwapIndex* DLLEXPORT qlOvernightIndexedSwapIndex(char* familyName, Period* tenor, unsigned settlementDays, Currency* currency, QlOvernightIndex* overnightIndex, char **e);
  QlSwapIndex* DLLEXPORT qlSwapIndex1(char* familyName, Period* tenor, unsigned settlementDays, Currency* currency, Calendar* calendar, Period* fixedLegTenor, int fixedLegConvention, DayCounter* fixedLegDayCounter, QlIborIndex* iborIndex, QlYieldTermStructure* discountingTermStructure, char **e);
  QlSwapIndex* DLLEXPORT qlSwapIndex(char* familyName, Period* tenor, unsigned settlementDays, Currency* currency, Calendar* calendar, Period* fixedLegTenor, int fixedLegConvention, DayCounter* fixedLegDayCounter, QlIborIndex* iborIndex, char **e);
  Schedule* DLLEXPORT qlBMAIndexFixingSchedule(QlBMAIndex* o, int start, int end, char **e);
  double DLLEXPORT qlInterestRateIndexForecastFixing(QlInterestRateIndex* o, int fixingDate, char **e);